--- a/index.html
+++ b/index.html
@@ -22,31 +22,31 @@
             <p id="para1">North Indian cuisine relies heavily on lentils, curries and flatbreads. Though vegetarian dishes are celebrated here, meat and poultry is also favoured.</p>
         </div>
         <div class="flexitem2">
-            <img src="../Restaurant Project/images/noodles.jpg" alt="Chinese Food Image" class="image2">
+            <img src="./Restaurant Project/images/noodles.jpg" alt="Chinese Food Image" class="image2">
             <p class="subheading2">Chinese</p>
             <p id="para2">One of the most popular foreign cuisines in India, Chinese cuisine doesn’t really need an introduction. Be it a Soup or Noodles </p>
         </div>
     </div>
     <div class="flexcontainer2">
         <div class="flexitem3">
-            <img src="../Restaurant Project/images/italian_food.jpg" alt="Italian Food Image" class="image3">
+            <img src="./Restaurant Project/images/italian_food.jpg" alt="Italian Food Image" class="image3">
             <p class="subheading3">Italian</p>
             <p id="para3">Italian cuisine is the celebration of earthy food of Italy, popularizing iconic dishes like, pasta, pizza, tiramisu, risotto all over the world.</p>
         </div>
         <div class="flexitem4">
-            <img src="../Restaurant Project/images/south_indian_food.jpg" alt="South Indian Food Image" class="image4">
+            <img src="./Restaurant Project/images/south_indian_food.jpg" alt="South Indian Food Image" class="image4">
             <p class="subheading4">South Indian</p>
             <p id="para4">The cuisine of South India is flavoured by the generous use of curry leaves, tamarind, coconut, vegetables and seafood. It is light yet delicious.</p>
         </div>
     </div>
     <div class="flexcontainer3">
         <div class="flexitem5">
-            <img src="../Restaurant Project/images/european_food.jpg" alt="European Food Image" class="image5">
+            <img src="./Restaurant Project/images/european_food.jpg" alt="European Food Image" class="image5">
             <p class="subheading5">European</p>
             <p id="para5">European cuisine or Western cuisine covers the cuisine of Europe and encompasses several countries. The cuisine offers a lot of variety and diversity.</p>
         </div>
         <div class="flexitem6">
-            <img src="../Restaurant Project/images/mediterranean_food.jpg" alt="Mediterranean Food Image" class="image6">
+            <img src="./Restaurant Project/images/mediterranean_food.jpg" alt="Mediterranean Food Image" class="image6">
             <p class="subheading6">Mediterranean</p>
             <p id="para6">Mediterranean cuisine follows the cooking of Mediterranean Basin region primarily focusing on Southern Europe. Staples are olive oil, bread, pasta, wine and many other</p>
         </div>
